// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-origin: list-origin 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "卡项权益",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {
            "text": "美容服务",
          },
          "children": Array [],
          "extraInfo": Object {},
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "凶悍大叔洗澡",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "温柔小姐姐做造型",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×8",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "精油美毛",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×12",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "text": "清洁服务",
      },
      "children": Array [],
      "extraInfo": Object {},
      "type": "Text",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "凶悍大叔洗澡",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "温柔小姐姐做造型",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×8",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`list-origin-2: list-origin-2 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "卡项权益",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {
            "text": "美容服务",
          },
          "children": Array [],
          "extraInfo": Object {},
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "凶悍大叔洗澡",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "温柔小姐姐做造型",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×8",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "精油美毛",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×12",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "text": "清洁服务",
      },
      "children": Array [],
      "extraInfo": Object {},
      "type": "Text",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "凶悍大叔洗澡",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "温柔小姐姐做造型",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×8",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`list-origin-3: list-origin-3 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "黑金VIP黄金卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥8848",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "粉丝珍爱卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥800",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "365天内有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "黑金VIP黄金卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥8848",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "粉丝珍爱卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥3200",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "至尊黄金卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥50",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "粉丝珍爱卡",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥3200",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "至尊黄金卡",
                  },
                  "children": Array [],
                  "extraInfo": Object {},
                  "type": "Text",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "¥50",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {
                        "text": "永久有效",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isMergeNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {},
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "————＞ω＜我是有底线的————",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;
